Fixing bug 86191. Don't return nsnull as a nsresult, return NS_OK in stead. r=sicking@bigfoot.com, sr=nobody, trivial change.